 * Fix #3567: Reminders can be added for a readonly bug.
 * Fix #3622: Tweak attachment SQL in print bug pages.
 * Fix #3629: Duplicate Error ID.
 * Fix #3641: 'Date submited' in reports is always '12-31-69'.
 * Fix #3723: No ability to edit or even delete news is associated project was deleted.
 * Fix #3837: Bugs can be edited after being closed.
 * New Config: set_view_status_threshold (default REPORTER) - threshold needed to set the view status while reporting a bug / bugnote.
 * New Config: change_view_status_threshold (default UPDATER) - threshold needed to update the view status while updating a bug / bugnote.
 * New Config: view_handler_threshold (default VIEWER) - threshold needed to view the bug handler (now works for emails only).
 * New Config: view_history_threshold (default VIEWER) - threshold needed to view the bug history (now works for emails only).
 * New Config: view_attachments_threshold (default VIEWER).  Access level needed to view bugs attachments.  View means to see the file names sizes, and timestamps of the attachments.
 * New Config: download_attachments_threshold (default VIEWER).  Access level needed to download bug attachments.
 * New Config: delete_attachments_threshold (default DEVELOPER).  Access level needed to delete bug attachments.
 * New Config: allow_view_own_attachments (default ON).  Allow users to view attachments uploaded by themselves even if their access level is below view_attachments_threshold.
 * New Config: allow_download_own_attachments (default ON).  Allow users to download attachments uploaded by themselves even if their access level is below download_attachments_threshold.
 * New Config: allow_delete_own_attachments (default OFF).  Allow users to delete attachments uploaded by themselves even if their access level is below delete_attachments_threshold.
 * New Config: default_bug_view_status (default VS_PUBLIC).  Default view status for bugs.