@@ -30,6 +30,7 @@ Mantis ChangeLog
  * Fix #3641: 'Date submited' in reports is always '12-31-69'.
  * Fix #3723: No ability to edit or even delete news is associated project was deleted.
  * Fix #3837: Bugs can be edited after being closed.
+ * Fix #3840: Why strip the leading spaces from Description? (applied to all multi-line fields in issue + issue notes).
  * New Config: set_view_status_threshold (default REPORTER) - threshold needed to set the view status while reporting a bug / bugnote.
  * New Config: change_view_status_threshold (default UPDATER) - threshold needed to update the view status while updating a bug / bugnote.
  * New Config: view_handler_threshold (default VIEWER) - threshold needed to view the bug handler (now works for emails only).
